src/test/ui/issues/issue-19538.stderr
error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/issue-19538.rs:17:15
   |
LL |     fn foo<T>(&self, val: T);
   |        --- method `foo` has generic type parameters
...
LL |     let test: &mut dyn Bar = &mut thing;
   |               ^^^^^^^^^^^^ the trait `Bar` cannot be made into an object

error[E0038]: the trait `Bar` cannot be made into an object
  --> $DIR/issue-19538.rs:17:30
   |
LL |     fn foo<T>(&self, val: T);
   |        --- method `foo` has generic type parameters
...
LL |     let test: &mut dyn Bar = &mut thing;
   |                              ^^^^^^^^^^ the trait `Bar` cannot be made into an object
   |
   = note: required because of the requirements on the impl of `std::ops::CoerceUnsized<&mut dyn Bar>` for `&mut Thing`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0038`.
